# Turbo-Gravity

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  index.js  index.ts  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker-publish.yml
src/: BotManager.js  BotManager.ts  config.rs  localConfig.js  localConfig.ts  main.rs  state.rs
src/bot/: automod.rs  mod.rs
src/bot/commands/: mod.rs
src/bot/commands/fun/: balance.rs  ball8.rs  coinflip.rs  daily.rs  leaderboard.rs  mod.rs  roll.rs  work.rs
src/bot/commands/misc/: choose.rs  giveaway.rs  mod.rs  poll.rs  remind.rs
src/bot/commands/moderation/: ban.rs  clearwarn.rs  kick.rs  lock.rs  mod.rs  purge.rs  slowmode.rs  tempban.rs  timeout.rs  unban.rs  unlock.rs  warn.rs  warnings.rs
src/bot/commands/tickets/: mod.rs  ticket.rs
src/bot/commands/utility/: avatar.rs  channelinfo.rs  contime.rs  embed.rs  help.rs  membercount.rs  mod.rs  (+6 more)
src/commands/fun/: 8ball.js  8ball.ts  balance.js  balance.ts  coinflip.js  coinflip.ts  daily.js  daily.ts  roll.js  roll.ts  work.js  work.ts
src/commands/misc/: choose.js  choose.ts  poll.js  poll.ts  remind.js  remind.ts
src/commands/moderation/: ban.js  ban.ts  kick.js  kick.ts  lock.js  lock.ts  purge.js  purge.ts  slowmode.js  slowmode.ts  timeout.js  timeout.ts  unban.js  unban.ts  unlock.js  unlock.ts  warn.js  warn.ts  warnings.js  warnings.ts
src/commands/tickets/: ticket.js  ticket.ts
src/commands/utility/: avatar.js  avatar.ts  channelinfo.js  channelinfo.ts  contime.js  contime.ts  embed.js  embed.ts  help.js  help.ts  ping.js  ping.ts  roleinfo.js  roleinfo.ts  serverinfo.js  serverinfo.ts  stats.js  stats.ts  uptime.js  uptime.ts  userinfo.js  userinfo.ts
src/dashboard/: auth.rs  mod.rs  pages.rs  routes.rs
src/dashboard/public/: styles.css
src/dashboard/views/: dashboard-new.ejs  dashboard-old.ejs  dashboard.ejs  error.ejs  selector.ejs  setup.ejs
src/db/: mod.rs  models.rs
src/models/: Config.js  Config.ts  User.js  User.ts  Warning.js  Warning.ts
