[package]
name = "turbo-gravity"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "turbo-gravity"
path = "src/main.rs"

[dependencies]
# Discord
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework for optional dashboard
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
mongodb = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# Error handling & logging
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
